css y html avanzado 26 julio 5:30 pm

--- a/2-introweb/3-introduccioncss/index.html
+++ b/2-introweb/3-introduccioncss/index.html
@@ -33,15 +33,104 @@ color: rgb(238, 21, 6);
 
 
   </style>
+
+
+<style>
+*.univ{
+color: #00af5da9;
+
+}
+
+</style>
+
+
+<style>
+*.univ1 {
+  color:#faea07e8
+  }
+
+</style>
+
+
     <!--
     esto es un comentario    
     <link rel="stylesheet" href="style.css">-->
     
+<!--Selector ID, E#e, almohadilla#-->
+<style>
+p#alm1{
+  color: blanchedalmond;
+
+}
+
+#alm2{
+  color: blue;
+}
+
+*#alm3 {
+color: #661d60;
+
+}
+
+</style> 
 
 
+<link rel="stylesheet" href="css/selector.css">
+
+
+<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
+
+
+  <p>Esto es párrafo 1</p>
+
+  <div>
+    <ul>
+      <li>
+        Esto es una lista
+        <p>Esto es un párrafo interno</p>
+      </li>
+    </ul>
+    <p>Esto es párrafo 3</p>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <p id="alm3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt fugit autem omnis praesentium pariatur cupiditate tenetur aliquam reiciendis. Beatae a rerum eveniet cumque dignissimos, animi deserunt distinctio laudantium voluptatem ducimus!</p>
+
+  <p id="alm2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum illo commodi magnam voluptatem optio totam nulla veritatis necessitatibus accusantium odit corrupti aliquam quod, exercitationem quibusdam, facere eius odio. Odio, porro?</p>
+
+  <p id="alm1">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quis perferendis quae expedita maiores a, necessitatibus, veniam eum, quaerat vero quam? Perspiciatis magni non molestias incidunt ipsum fugiat similique labore?
+
+  </p>
+
+<div class="univ1">
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iste velit maxime dolores, odio magni ducimus amet, sequi nobis qui ex quod labore facilis doloribus pariatur doloremque necessitatibus maiores facere.
+</div>
+
+  <p class="univ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam error, deserunt dolorum minus sunt voluptatibus commodi odio animi, eum placeat quisquam reiciendis quas? Id sunt, veritatis quia quis sequi optio?</p>
     <h1   style="color: blue;">Prueba</h1>
 <div class="nuevo">
 
@@ -49,6 +138,8 @@ color: rgb(238, 21, 6);
     <br> Atque fuga quibusdam quos alias eos repellendus repellat ex excepturi deserunt nesciunt rerum fugit minus doloremque qui libero laboriosam veritatis,
     <br> tempore distinctio.
 
+
+    <!--clase E.e-->
     <p class="aviso">tempore distinctio</p>
 
   </div>
