--- a/2-introweb/cssavanzado/cajas.html
+++ b/2-introweb/cssavanzado/cajas.html
@@ -7,7 +7,7 @@
     <title>cajas</title>
 
 
-    <link rel="stylesheet" href="assets/css/cajas.css">
+    <link rel="stylesheet" href="assets/css/display.css">
 
 
 
@@ -15,16 +15,40 @@
 <body>
 
 
+    <div class="cuadro-padre">
+
     <div class="cuadro el-1">1</div>
     <div class="cuadro el-2">2</div>
-    <div class="cuadro el-3">3</div>
+    <div class="cuadro el-3">3
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7G3joQDjoDejnYzrKnkUvObT_oAANzORZb3dB8hVmqIhGuhhiH6GJiGCA5kVJ09UwyEY&usqp=CAU" alt="" width="100px">
+
+    </div>
     <div class="cuadro el-4">4</div>
     <div class="cuadro el-5">5</div>
+
+    </div>
+
+    <!--
+
     <div class="cuadro el-3">3</div>
     <div class="cuadro el-3">3</div>
 
+    -->
+
+    <!--Introducción a bootstrap-->
+    <div class="contenedor">
+        <div class="fila">
+            <div class="columna" style="background-color: red;">1</div>
+            <div class="columna" style="background-color: rgb(4, 0, 255)";>2</div>
+            <div class="columna" style="background-color: rgb(217, 255, 0)";>3</div>
+        </div>
 
 
-    
+    </div>
+
+
+
+
 </body>
 </html>
+
