--- a/ejercicios-codigo/ejercicios.html
+++ b/ejercicios-codigo/ejercicios.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="funcion-3.js"></script>
+    <script src="ejercicios.js"></script>
+
 
 </head>
 <body>
