--- a/3-javascript/js-04/index.html
+++ b/3-javascript/js-04/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="3casadevirgo.js"></script>
+
+
+    <script src="assets/js/arreglos.js"></script>
 
 
 </head>
