--- a/3-javascript/ejercicios/ejercicios.html
+++ b/3-javascript/ejercicios/ejercicios.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-
-
-    <script src="assets/js/prueba.js"></script>
+    <script src="ejercicio3.js"></script>
 
 
 </head>
