--- a/3-javascript/js-05/expReg/expresion.html
+++ b/3-javascript/js-05/expReg/expresion.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <script src="expresion.js"></script>
 
-
-    <script src="assets/js/prueba.js"></script>
 
 
 </head>
