--- a/2-introweb/bootstrap/index.html
+++ b/2-introweb/bootstrap/index.html
@@ -13,6 +13,15 @@
 <body>
 
 
+<!--panel-->
+
+<div class="panel panel-default">
+    <div class="panel-body">A Basic Panel</div>
+  </div>
+
+
+
+
 
 <!--uso de container-->
     <div class="container border">
@@ -55,6 +64,17 @@
 
              <!--contenido productos-->
             <section class="col-9 border">
+
+
+
+
+                <div class="panel panel-default">
+                    <div class="panel-body">A Basic Panel</div>
+                  </div>
+
+
+
+
                 <h2>Productos</h2>
                     <hr>
                         <div class="item row">
